# git-trans

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cmd.rs  git.rs  main.rs  records.rs  utils.rs
test/inner/: inner-test.md
